--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
             color: #2c3e50;
             font-weight: bold;
         }
+        .contact {
+            text-align: center;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ddd;
+        }
+        .separator {
+            border-top: 1px solid #ddd;
+            margin: 40px 0;
+        }
     </style>
 </head>
 <body>
@@ -72,6 +82,8 @@
         <ul>
             <li><a href="https://www.openstreetmap.org/">OpenStreetMap</a></li>
             <li><a href="https://leafletjs.com/">Leaflet.js</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML5</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a></li>
         </ul>
 
         <h2>Features</h2>
@@ -82,6 +94,8 @@
             <li>Responsive: adapts to screens of all sizes</li>
         </ul>
     </div>
+
+    <div class="separator"></div>
 
     <div id="italiano" class="language-section">
         <h1>Coordmap.com</h1>
@@ -107,6 +121,8 @@
         <ul>
             <li><a href="https://www.openstreetmap.org/">OpenStreetMap</a></li>
             <li><a href="https://leafletjs.com/">Leaflet.js</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML5</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a></li>
         </ul>
 
         <h2>Caratteristiche</h2>
@@ -116,6 +132,10 @@
             <li>Leggero: caricamento rapido senza rallentare il sito</li>
             <li>Responsive: adattamento a schermi di tutte le dimensioni</li>
         </ul>
+    </div>
+
+    <div class="contact">
+        <p>Contact: <a href="https://twitter.com/hi1zkn" target="_blank">hi1zkn on Twitter</a></p>
     </div>
 </body>
 </html>
