--- a/docs.html
+++ b/docs.html
@@ -112,7 +112,7 @@
         <li>Responsive: adapts to screens of all sizes</li>
       </ul>
     </div>
-
+    <p><a href="https://github.com/1zkn/coordmap">GitHub Repository</a></p>
     <div class="separator"></div>
 
     <div id="italiano" class="language-section">
@@ -166,13 +166,13 @@
         <li>Responsive: adattamento a schermi di tutte le dimensioni</li>
       </ul>
     </div>
-
+    <p><a href="https://github.com/1zkn/coordmap">GitHub Repository</a></p>
     <div class="contact">
       <p>
         Contact:
         <a href="https://twitter.com/hi1zkn" target="_blank"
           >hi1zkn on Twitter</a
-        >
+        >|<p>kevin@zkn.app</p>
       </p>
     </div>
   </body>
