--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CoordMap - OpenStreetMap</title>
+    <title>Coordmap.com - Simplified Map Embedding | Embedding di Mappe Semplificato</title>
     <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
@@ -14,16 +14,85 @@
     <!-- Stile per il contenitore della mappa -->
     <style>
       #map {
-        height: 100vh;
-        width: 100%;
+          height: 100vh;
+          width: 100%;
+          display: none;
       }
+      
       body {
-        margin: 0;
-        padding: 0;
+          margin: 0;
+          padding: 0;
       }
-    </style>
+
+      .js-notice {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+          font-family: Arial, sans-serif;
+          text-align: center;
+      }
+
+      .notice-container {
+          background-color: white;
+          padding: 2rem;
+          border-radius: 10px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          max-width: 80%;
+      }
+
+      .main-text {
+          font-size: 24px;
+          color: #333;
+          margin-bottom: 1rem;
+      }
+
+      .sub-text {
+          font-size: 18px;
+          color: #666;
+          margin-top: 0.5rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 8px;
+      }
+
+      .js-enabled .js-notice {
+          display: none;
+      }
+
+      .js-enabled #map {
+          display: block;
+      }
+
+      .icon {
+          width: 20px;
+          height: 20px;
+          fill: #666;
+      }
+  </style>
   </head>
   <body>
+    <div class="js-notice">
+      <div class="notice-container">
+          <div class="main-text">
+              JavaScript is required<br>
+              to view the map
+          </div>
+          <div class="sub-text">
+              <svg class="icon" viewBox="0 0 24 24">
+                  <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 14.5v-5c0-.55.45-1 1-1s1 .45 1 1v5c0 .55-.45 1-1 1s-1-.45-1-1zm1-8.5c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z"/>
+              </svg>
+              coordmap.com
+          </div>
+      </div>
+    </div>
     <div id="map"></div>
 
     <!-- Leaflet JavaScript -->
@@ -32,7 +101,9 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
-
+    <script>
+      document.body.className += "js-enabled";
+    </script>
     <!-- Il tuo script principale -->
     <script type="module" src="/js/main.js"></script>
   </body>
