--- a/docs.html
+++ b/docs.html
@@ -53,7 +53,7 @@
                     <h2 class="text-2xl font-semibold mb-4">Quick Usage</h2>
                     <div class="bg-gray-50 p-4 rounded-md mb-4">
                         <code class="text-sm text-gray-800 break-all">
-                            coordmap.com/o/41.9028,12.4964
+                            map.zkn.app/o/41.9028,12.4964
                         </code>
                     </div>
                     <p class="text-gray-600">Just add coordinates to the URL and get an instant map view</p>
@@ -63,7 +63,7 @@
                     <h2 class="text-2xl font-semibold mb-4">Embed in Website</h2>
                     <div class="bg-gray-50 p-4 rounded-md mb-4">
                         <code class="text-sm text-gray-800 break-all">
-                            &lt;iframe src="https://coordmap.com/o/41.9028,12.4964" width="600" height="450" allowfullscreen loading="lazy"&gt;&lt;/iframe&gt;
+                            &lt;iframe src="https://map.zkn.app/o/41.9028,12.4964" width="600" height="450" allowfullscreen loading="lazy"&gt;&lt;/iframe&gt;
                         </code>
                     </div>
                     <p class="text-gray-600">Simple iframe implementation for any website</p>
@@ -133,7 +133,7 @@
                     <h2 class="text-2xl font-semibold mb-4">Uso Rapido</h2>
                     <div class="bg-gray-50 p-4 rounded-md mb-4">
                         <code class="text-sm text-gray-800 break-all">
-                            coordmap.com/o/41.9028,12.4964
+                            map.zkn.app/o/41.9028,12.4964
                         </code>
                     </div>
                     <p class="text-gray-600">Aggiungi semplicemente le coordinate all'URL per ottenere una vista della mappa</p>
@@ -143,7 +143,7 @@
                     <h2 class="text-2xl font-semibold mb-4">Incorpora nel Sito Web</h2>
                     <div class="bg-gray-50 p-4 rounded-md mb-4">
                         <code class="text-sm text-gray-800 break-all">
-                            &lt;iframe src="https://coordmap.com/o/41.9028,12.4964" width="600" height="450" allowfullscreen loading="lazy"&gt;&lt;/iframe&gt;
+                            &lt;iframe src="https://map.zkn.app/o/41.9028,12.4964" width="600" height="450" allowfullscreen loading="lazy"&gt;&lt;/iframe&gt;
                         </code>
                     </div>
                     <p class="text-gray-600">Semplice implementazione iframe per qualsiasi sito web</p>
