--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coordmap.com - Simplified Map Embedding | Embedding di Mappe Semplificato</title>
+    <title>map.zkn.app - Simplified Map Embedding | Embedding di Mappe Semplificato</title>
     <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
@@ -89,7 +89,7 @@
               <svg class="icon" viewBox="0 0 24 24">
                   <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 14.5v-5c0-.55.45-1 1-1s1 .45 1 1v5c0 .55-.45 1-1 1s-1-.45-1-1zm1-8.5c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z"/>
               </svg>
-              coordmap.com
+              map.zkn.app
           </div>
       </div>
     </div>
