--- a/docs.html
+++ b/docs.html
@@ -53,6 +53,11 @@
                     <h2 class="text-2xl font-semibold mb-4">Quick Usage</h2>
                     <div class="bg-gray-50 p-4 rounded-md mb-4">
                         <code class="text-sm text-gray-800 break-all">
+                            map.zkn.app/o/{latitude},{longitude}
+                        </code>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-md mb-4">
+                        <code class="text-sm text-gray-800 break-all">
                             map.zkn.app/o/41.9028,12.4964
                         </code>
                     </div>
